# FeedbackBackend/src/controller/feedback-controller.ts
@@ -7,52 +7,56 @@ import { feedback_type } from '../middlewares/enums/feedback_type_enum'
 import FeedbackTemplate from '../model/feedback_template_model'
 import DeliveryAgentFeedback from '../model/delivery_agent_model'
 import { escape } from 'querystring'
+import User from '../model/user_model'
 
 // create a feedback
-export const getFeedbacks = async( req:Request, res:Response ) => {
+export const getFeedbacks = async (req:Request, res:Response) => {
+    const page = parseInt(req.query.page as string) || 1;
+    const size = parseInt(req.query.size as string) || 10;
 
-    const page = parseInt(req.query.page as string) || 1; // Default to page 1 if not provided
-    const size = parseInt(req.query.size as  string) || 10; // Default to 10 feedbacks per page if not provided
-  try {
-    // Count total feedbacks
-    const totalCount = await FeedbackModel.countDocuments();
-
-    // Calculate pagination values
-    const totalPages = Math.ceil(totalCount / size);
-    const skip = (page - 1) * size;
-
-    // Get feedbacks based on pagination parameters
-    await FeedbackModel.find()
-      .sort({ createdAt: -1 }) // Sort by createdAt field in descending order
-      .skip(skip)
-      .limit(size)
-      .then((data) => {
-        const updated_feedback: Array<object> = data.map((feedback) => ({
-          feedback_id: feedback._id,
-          user_id: feedback.user_id,
-          product_id: feedback?.product_id,
-          rating: feedback.rating,
-          comment: feedback?.comment,
-          review: feedback?.additional_fields,
-          QA: feedback?.qas,
-          created_at: feedback.createdAt,
-          updated_at: feedback.updatedAt,
-        }));
-
-        const response = {
-          feedbacks: updated_feedback,
-          currentPage: page,
-          totalPages: totalPages,
-          totalFeedbacks: totalCount,
-        };
-
-        res.status(200).send(response);
-      })
-      .catch((err) => res.status(404).send(err));
-  } catch (error) {
-    res.status(500).send("Internal Server Error");
-  }
-};
+    if(page<1 || size>25 || size<1){
+        res.status(400).json({error:"Invalid , page and size"});
+    }
+    try {
+      const totalCount = await FeedbackModel.countDocuments();
+      const totalPages = Math.ceil(totalCount / size);
+      const skip = (page - 1) * size;
+  
+      const feedbacks = await FeedbackModel.find()
+        .sort({ createdAt: -1 })
+        .skip(skip)
+        .limit(size);
+  
+      const updated_feedback = await Promise.all(
+        feedbacks.map(async (feedback) => {
+          const user = await User.findOne({ _id: feedback.user_id });
+          return {
+            feedback_id: feedback._id,
+            user_id: feedback.user_id,
+            user_name: user ? user.name : null,
+            product_id: feedback.product_id,
+            rating: feedback.rating,
+            comment: feedback.comment,
+            review: feedback.additional_fields,
+            QA: feedback.qas,
+            created_at: feedback.createdAt,
+            updated_at: feedback.updatedAt,
+          };
+        })
+      );
+  
+      const response = {
+        feedbacks: updated_feedback,
+        currentPage: page,
+        totalPages: totalPages,
+        totalFeedbacks: totalCount,
+      };
+  
+      res.status(200).send(response);
+    } catch (error) {
+        res.status(404).json({error:`Feedback not fetched : ${error}`});
+    }
+  };
 
 // create a feedback
 export const createFeedback = async( req:Request, res:Response ) => {
@@ -66,17 +70,17 @@ export const createFeedback = async( req:Request, res:Response ) => {
     try {
 
         // getting the user_id from the auth 
-        const user_id = req.user?.id;  // auth token payload 
+        // const user_id = req.user?.id;  // auth token payload 
         // const delivery_agent_data = DeliveryAgent.findOne({user_id:user_id})
         // feedback_data.deliveryagent_id = delivery_agent_data._id;
     
          //searhing for an existing template for the given template type
-        const feedback_template = await FeedbackTemplate.findOne({type:template_type});
+        // const feedback_template = await FeedbackTemplate.findOne({type:template_type});
 
         // check if the user exists and then make the response 
         const new_feedback_data = {...feedback_data, 
-            //client_id:feedback_template?.client_id, 
-            template_id:feedback_template?._id,
+            // client_id:feedback_template?.client_id, 
+            // template_id:feedback_template?._id,
             // user_id:user_id
         }
         
@@ -85,7 +89,7 @@ export const createFeedback = async( req:Request, res:Response ) => {
         .catch(err => res.status(400).send(err))
 
     } catch (error) {
-        res.status(500).send("internal server error")
+        res.status(500).json({error:`Feedback not ceated : ${error}`});
     }
 }
 
@@ -100,7 +104,7 @@ export const updateFeedback = async( req:Request, res:Response ) => {
         .catch(err => res.status(404).send(err))
 
     } catch (error) {
-        res.status(500).send(`Internal Server Error : ${error}`)
+        res.status(500).json({error:`Feedback not updated : ${error}`});
     }
 }
 
@@ -115,7 +119,7 @@ export const deleteFeedback = async( req:Request, res:Response ) => {
         .catch(err => res.status(404).send("No Feedback Found"))
 
     } catch (error) {
-        res.status(500).send("Internal Server Error")
+        res.status(500).json({error:`Feedback not deleted : ${error}`});
         
     }
 }
@@ -146,7 +150,7 @@ export const get_feedback = async(req:Request, res:Response) => {
             res.status(404).json({error:"No Feedback Found"});
         }
     } catch (error) {
-        res.status(500).json({error:`Internal Server Error: ${error}`})
+        res.status(500).json({error:`Request failed : ${error}`});
     }
 }
 
@@ -213,10 +217,12 @@ export const getFeedbacksByDate = async(req:Request, res:Response) => {
             }
         })
         
-        feedbacks.forEach(feedback => {
+        feedbacks.forEach(async feedback => {
+            const user_data = await User.findById(feedback.user_id);
             const new_feedback:object = {
                 feedback_id: feedback._id,
                 user_id: feedback.user_id,
+                user_name: user_data?.name,
                 product_id:feedback?.product_id,
                 rating:feedback.rating,
                 comment:feedback?.comment,
@@ -231,36 +237,39 @@ export const getFeedbacksByDate = async(req:Request, res:Response) => {
         res.send(updated_feedback)
             
     } catch (error) {
-        res.status(500).json({error:"Feedbacks not fetched"})
+        res.status(500).json({error:`Feedback not fetched : ${error}`});
     }
 }
 
 
 //testing purpose 
 export const getAllFeedbacks = async(req:Request, res:Response) => {
-    let updated_feedback:Array<object>=[];
     try {
-        const feedbacks = await FeedbackModel.find().sort({createdAt:-1})
-        feedbacks.forEach(feedback => {
-            const new_feedback:object = {
-                feedback_id: feedback._id,
-                user_id: feedback.user_id,
-                product_id:feedback?.product_id,
-                rating:feedback.rating,
-                comment:feedback?.comment,
-                review:feedback?.additional_fields,
-                QA:feedback?.qas,
-                created_at:feedback.createdAt,
-                updated_at:feedback.updatedAt
-            }
-
-            updated_feedback.push(new_feedback);
-        })
+        const feedbacks = await FeedbackModel.find().sort({ createdAt: -1 });
+    
+        const updated_feedback: Array<object> = [];
+        for (const feedback of feedbacks) {
+          const user_data = await User.findById(feedback.user_id);
+          const new_feedback: object = {
+            feedback_id: feedback._id,
+            user_id: feedback.user_id,
+            user_name: user_data?.name,
+            product_id: feedback?.product_id,
+            // product_name
+            rating: feedback.rating,
+            comment: feedback?.comment,
+            review: feedback?.additional_fields,
+            QA: feedback?.qas,
+            created_at: feedback.createdAt,
+            updated_at: feedback.updatedAt,
+          };
+          updated_feedback.push(new_feedback);
+        }
         res.status(200).send(updated_feedback);
-    } catch (error) {
-        res.status(500).send(error)
-    }
-}
+      } catch (error) {
+        res.status(500).json({error:`Feedback not fetched : ${error}`});
+      }
+    };
 
 // delivery agent feedback apis 
 export const getDeliveryAgentFeedbacks = async(req:Request, res:Response ) => {
@@ -275,7 +284,7 @@ export const getDeliveryAgentFeedbacks = async(req:Request, res:Response ) => {
             res.status(200).send(updated_feedback);
         
     } catch (error) {
-        res.status(500).send(error)
+        res.status(404).json({error:`Feedbacks not found for the agent : ${error}`});
     }
 }
 
@@ -286,6 +295,6 @@ export const createDeliveryAgentFeedbacks = async(req:Request, res:Response ) =>
             res.status(200).send(feedback);
         
     } catch (error) {
-        res.status(500).send(error)
+        res.status(500).json({error:`Feedback not ceated : ${error}`});
     }
 }
